--- a/app/styles/app/mediaqueries.styl
+++ b/app/styles/app/mediaqueries.styl
@@ -23,7 +23,7 @@
 
 @media (max-width: 900px)
     #nav-docs
-        margin-left -260px
+        margin-left calc(-255px - 5%)
 
     #menu-list
         display block
@@ -84,6 +84,9 @@
 
     main
         margin-top 82px
+
+    .anchor
+        bottom 167px
 
     #nav-docs
         top 11em
